--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cream"
+    android:background="@color/green"
     tools:context=".view.profile.ProfileFragment">
 
 
@@ -37,69 +37,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-<<<<<<< HEAD
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="343dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="48dp"
-        android:text="SURYA"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.409"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="346dp"
-        android:layout_height="3dp"
-        android:layout_marginTop="12dp"
-        android:background="#000000"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="341dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="4dp"
-        android:text="Email"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.371"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <View
-        android:id="@+id/view2"
-        android:layout_width="346dp"
-        android:layout_height="3dp"
-        android:layout_marginTop="8dp"
-        android:background="#000000"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="340dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="4dp"
-        android:text="Jenis Kelamin"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.38"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view3" />
-
-=======
->>>>>>> e44559e70e85fbe2d50e3db10c7c549e967c4da6
     <View
         android:id="@+id/view4"
         android:layout_width="346dp"
@@ -136,24 +73,14 @@
         app:layout_constraintTop_toBottomOf="@+id/view3" />
 
     <Button
-<<<<<<< HEAD
-        android:layout_width="144dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/yelow"
-=======
         android:layout_width="129dp"
         android:layout_height="44dp"
         android:layout_marginTop="8dp"
->>>>>>> e44559e70e85fbe2d50e3db10c7c549e967c4da6
         android:text="Edit"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.854"
+        app:layout_constraintHorizontal_bias="0.861"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view5"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <View
         android:id="@+id/view3"
@@ -168,17 +95,6 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <View
-<<<<<<< HEAD
-        android:id="@+id/view5"
-        android:layout_width="346dp"
-        android:layout_height="3dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.415"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-=======
         android:id="@+id/view2"
         android:layout_width="346dp"
         android:layout_height="3dp"
@@ -189,7 +105,6 @@
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
->>>>>>> e44559e70e85fbe2d50e3db10c7c549e967c4da6
 
     <TextView
         android:id="@+id/textView2"
@@ -229,15 +144,6 @@
 
     <TextView
         android:id="@+id/textView6"
-<<<<<<< HEAD
-        android:layout_width="342dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="4dp"
-        android:text="No.Tlp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.382"
-=======
         android:layout_width="341dp"
         android:layout_height="22dp"
         android:layout_marginTop="8dp"
@@ -245,7 +151,6 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.371"
->>>>>>> e44559e70e85fbe2d50e3db10c7c549e967c4da6
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
 
