--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
+    android:background="@color/cream"
     tools:context=".view.profile.ProfileFragment">
 
 
@@ -19,7 +19,7 @@
         android:gravity="center"
         android:text="Profil"
         android:textColor="#000000"
-        android:textSize="16dp"
+        android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,13 +27,13 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="155dp"
         android:layout_gravity="center"
         android:layout_marginHorizontal="70dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/pasurya"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/pasurya"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -75,7 +75,7 @@
     <Button
         android:layout_width="129dp"
         android:layout_height="44dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="100dp"
         android:text="Edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.861"
