--- a/app/src/main/res/layout/activity_bayar2.xml
+++ b/app/src/main/res/layout/activity_bayar2.xml
@@ -1,9 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.shop.BayarActivity">
+    tools:context=".view.shop.BayarActivity"
+    android:background="@color/cream"
+    android:id="@+id/containerBayar">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="137dp"
+        android:fontFamily="@font/poppinsmedium"
+        android:text="Pembayaran"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingStart="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_below="@id/info">
+    </LinearLayout>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/info"
+        android:layout_marginTop="48dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/button_shape"
+        android:backgroundTint="@color/white"
+        android:hint="Masukkan nama anda "
+        android:paddingLeft="20dp"
+        android:id="@+id/id_fullname"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/id_fullname"
+        android:layout_marginTop="48dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/button_shape"
+        android:backgroundTint="@color/white"
+        android:hint="Masukkan nomor kartu anda "
+        android:paddingLeft="20dp"
+        android:id="@+id/id_nocard"
+        />
+
+    <EditText
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/id_nocard"
+        android:layout_marginTop="48dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/button_shape"
+        android:backgroundTint="@color/white"
+        android:hint="City"
+        android:paddingLeft="20dp"
+        android:id="@+id/id_city"
+        />
+
+    <EditText
+        android:id="@+id/id_code"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/id_nocard"
+        android:layout_marginLeft="250dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/button_shape"
+        android:backgroundTint="@color/white"
+        android:hint="Code"
+        android:paddingLeft="20dp" />
+
+    <Button
+        android:id="@+id/btn_bayar"
+        android:layout_width="220dp"
+        android:layout_height="50dp"
+        android:text="PAYMENT"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/yelow"
+        android:layout_marginTop="40dp"
+        android:layout_below="@id/id_code"
+        android:layout_centerHorizontal="true"/>
+
+
+
+</RelativeLayout>
