--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -1,46 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/green"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.forum.ForumFragment">
 
-    <RelativeLayout
+    <LinearLayout
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:id="@+id/layout_one"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="12dp"
-        android:id="@+id/layout_one">
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="67dp">
 
+            <TextView
+                android:layout_width="334dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:drawableStart="@drawable/search"
+                android:drawablePadding="50dp"
+                android:gravity="center_vertical"
+                android:text="Search...."
+                android:textSize="18sp" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/pasurya"
+                tools:src="@tools:sample/avatars" />
+
+        </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#DFDFDF"></RelativeLayout>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtsearch"
-            android:drawableStart="@drawable/search"
-            android:padding="12dp"
-            android:text=" search......"
-            android:gravity="center_vertical"
-            android:textSize="18sp"/>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/pasurya"
-            android:id="@+id/profile"/>
+            android:text="Status"/>
+        <LinearLayout
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-    </RelativeLayout>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/placholder"
+                    tools:src="@tools:sample/avatars" />
+            </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/grey"
-        android:id="@+id/line_break"
-        android:layout_margin="1dp"/>
-
-    
+            <RelativeLayout
+                android:layout_width="10dp"
+                android:layout_height="match_parent">
+            </RelativeLayout>
 
 
-</RelativeLayout>
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/placholder"
+                    tools:src="@tools:sample/avatars" />
+
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="10dp"
+                android:layout_height="match_parent">
+            </RelativeLayout>
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/placholder"
+                    tools:src="@tools:sample/avatars" />
+
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="10dp"
+                android:layout_height="match_parent">
+            </RelativeLayout>
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/placholder"
+                    tools:src="@tools:sample/avatars" />
+
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="10dp"
+                android:layout_height="match_parent">
+            </RelativeLayout>
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/placholder"
+                    tools:src="@tools:sample/avatars" />
+
+            </LinearLayout>
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="Comunitas"/>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="400dp"></ListView>
+        <View
+            android:id="@id/line_break"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/grey"
+            android:layout_below="@id/layout_one"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@id/content_main"
+            android:layout_below="@id/line_break"
+            android:layout_marginTop="1dp"/>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:background="@drawable/radius_buton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/bottom_navigation"
+            app:labelVisibilityMode="unlabeled"
+            app:menu="@menu/bottom_nav_menu"/>
+
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
+
